Fix for injured player.

--- a/views/teams.html
+++ b/views/teams.html
@@ -60,7 +60,7 @@
                                  title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}} &nbsp;
@@ -80,7 +80,7 @@
                                  title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}}
@@ -97,7 +97,7 @@
                                                                                                                                           title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}} &nbsp;
@@ -116,7 +116,7 @@
                                                                                                                                             title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}} &nbsp;
@@ -133,7 +133,7 @@
                                                                                                                                              title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}} &nbsp;
@@ -151,7 +151,7 @@
                                                                                                                                              title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.forwards[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.forwards[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.forwards[a].injury}} - {{team.forwards[a].injuryDescriptions[0]}}">
                             <br>{{team.forwards[a].fullName}} &nbsp;
@@ -169,7 +169,7 @@
                                                                                                                                           title="Meilleur joueur de son groupe.">
                             <img src="img/thumbs-down.png" ng-if="team.goalies[a].isWorst" style="width: 25px;"
                                  title="Pire joueur de son groupe.">
-                            <img ng-if="team.goalies[a].isInjured" class="img-rounded" src="img/plaster-rw.png"
+                            <img ng-if="team.goalies[a].isInjured" class="img-rounded" src="img/Plaster-rw.png"
                                  style="height: 20px; cursor: pointer;"
                                  title="{{team.goalies[a].injury}} - {{team.goalies[a].injuryDescriptions[0]}}">
                             <br>{{team.goalies[a].fullName}} &nbsp;
