--- a/views/leaders.html
+++ b/views/leaders.html
@@ -24,7 +24,7 @@
 			                          </table>
 			                      </td>
 			                      </tr>
-			                  <tr><td ng-if="pool.bestLast14Days.pointsDiff > 0 && liveTeams.topTotalScore == 0">
+			                  <tr><td ng-if="pool.bestLast14Days.pointsDiff > 0">
 			 				                          <table>
 			 				                              <tr>
 			 				                                  <td>
@@ -127,7 +127,7 @@
 			                                     </tr>
 			                                 </table>
 			                             </td></tr><tr>
-			                             <td ng-if="pool.worstLast14Days.pointsDiff > 0 && liveTeams.topTotalScore == 0">
+			                             <td ng-if="pool.worstLast14Days.pointsDiff > 0">
 										                                  <table ng-cloak>
 										                                      <tr>
 										                                          <td>
